# generate-google-oauth-tokens

./: .gitignore  pyproject.toml
django/: .env.local  manage.py
django/generate_google_oauth_tokens_function/: asgi.py  settings.py  urls.py  wsgi.py
django/tokens/: serializers.py  urls.py  views.py
